# fastapi-study

./: commands.txt  eae.py  gzipreq.py  pyproject.toml
advanced_fastapi/: app.py  background_tasks.py  lifespan.py  main.py
advanced_fastapi/api/: router.py
advanced_fastapi/api/routes/: __init__.py  gzip.py  root.py
advanced_fastapi/middlewares/: ExtraResponseHeadersMiddleware.py  LoggedRequestBodySizeMiddleware.py  SchedulerMiddleware.py  __init__.py
advanced_fastapi/middlewares/interfaces/: ASGIMiddleware.py
fastapi-websockets/: app copy.py  app.py  package-lock.json  package.json  proxy.js
public/: index.html
