[tool.poetry]
name = "advanced-fastapi"
version = "0.1.0"
description = ""
authors = ["Felipe Curcio <felipe_nieto010@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
apscheduler = "4.0.0a4"
requests = "^2.31.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'advanced_fastapi.main:main'